# T4.1

./: .dockerignore  .gitignore  CMakeLists.txt  OVERVIEW.md  README.md  README_TESTES.md  SPEC.md  atuador_central  atuador_central.cpp  central_de_monitoramento  central_de_monitoramento.cpp  central_de_operacao  central_de_operacao.cpp  demonstrar_erro.py  diagram.json  docker-compose.yml  ngrok.yml  parametros_entrada.json  programador_de_atuacao.cpp  programador_de_atuacao.dados.json  programador_de_atuacao_local  programador_de_atuacao_local.cpp  run_all.ps1  strlcpy_compat.h  test_api_atuador.py  test_api_monitoramento.py  test_api_operacao.py  test_api_programador.py  testes_requisicoes_programador.txt  viva_seu_video_local.cpp
.github/workflows/: avisar-qa.yml  testes.yml
docker/: Dockerfile
testes_unity/: LittleFS.h  mocks_hardware.h  test_main.cpp
tests/: test_api_atuador.py  test_api_monitoramento.py  test_api_operacao.py
